[package]
name = "load_balancer"
version = "0.1.0"
authors = ["Eleonora Kiziv <eleonora_kiziv@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noria = { path = "/Users/eleonorakiziv/rust/noria/noria/noria-server", package = "noria-server" }
slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_trace"] }
slog-term = "2.4.0"

tokio = "0.1.22"
tower = "0.1.1"
tower-balance = { git = "https://github.com/tower-rs/tower.git", rev = "793e2e8e"}
tokio-tower = { git = "https://github.com/tower-rs/tokio-tower.git", rev = "2e1d40903b9a294d8c984612400838dcdc8fd758"}
tower-service = "0.2"
tower-load = { git = "https://github.com/tower-rs/tower.git", rev = "793e2e8e"}











# noria = { git = "https://github.com/mit-pdos/noria", branch="add-parent" }

