[package]
name = "parser"
version = "0.1.0"
authors = ["Eleonora Kiziv <eleonora_kiziv@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
hdrhistogram = "6.0"

